fixed batteryPercent black font in dark mode

--- a/ui/assets/css/style.css
+++ b/ui/assets/css/style.css
@@ -243,6 +243,7 @@ button {
 #batteryPercent {
     display: none;
     position: relative;
+    color: var(--main-color);
 }
 .chargePercent {
     font-size: 0.6em
